Fixed bug where menus stayed expanded and would not collapse

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,17 +1,24 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 #admin-page {
-  padding-top: 0px;
+
+  padding-top:0px;
+
+
 }
 
-#nested-comment {
-  margin-top: 60px;
+
+#nested-comment{
+
+  margin-top:60px;
+
+
 }
 
 .comment-reply {
+
   display: none;
+  
+  
 }
 
-body {
-  background:green;
-}
